# client-server-cpp-app

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  GITHUB_PAGES_SETUP.md  GITHUB_SETUP.md  README.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  generate-docs.yml  release.yml
docs/: class_diagram.md  use_case_diagram.md
include/client/: Client.h
include/common/: Message.h  User.h
include/server/: ClientHandler.h  Server.h
scripts/: build.sh  generate_docs.sh  run_tests.sh
src/client/: Client.cpp  main.cpp
src/common/: Message.cpp  User.cpp
src/server/: ClientHandler.cpp  Server.cpp  main.cpp
tests/: defects.md  test_cases.md
